--- a/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_Layout.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/SharedAdmin/_Layout.cshtml
@@ -8,8 +8,10 @@
     <link rel="Stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="Stylesheet" href="/Content/css/style.css" />
     <link rel="stylesheet" href="/Content/assets/css/demo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Toastr -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 </head>
 <style>
     .navbar {
