--- a/QuanLyKhachSan/QuanLyKhachSan/Views/CaNhan/LichSu.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/CaNhan/LichSu.cshtml
@@ -1,7 +1,11 @@
-﻿@{
+﻿@using System;
+@using System.Globalization;
+@using System.Threading;
+@{
     ViewBag.Title = "Lịch Sử";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.DiaChi = 2;
+    Thread.CurrentThread.CurrentCulture = new CultureInfo("vn-VN", true);
 }
 
 @using QuanLyKhachSan.Models.ViewModels
@@ -27,7 +31,7 @@
                         <tr><th>Ở Từ Ngày:</th><th><span style="color: #669900">@lsv.NgayDen</span></th></tr>
                         <tr><th>Đến Ngày:</th><th><span style="color: #008000">@lsv.NgayTra</span></th></tr>
                         <tr><th>Dịch Vụ:</th><th><span style="color: #009999">@lsv.DichVu</span></th></tr>
-                        <tr><th>Giá:</th><th><span style="color: #e6004c">@lsv.ThanhTien.000 đ/ngày</span></th></tr>
+                        <tr><th>Giá:</th><th><span style="color: #e6004c">@lsv.ThanhTien.GetValueOrDefault().ToString("c")</span></th></tr>
                         @if (lsv.TrangThai > 0)
                         {
                             <tr><th>Phương thức thanh toán:</th><th><span style="color: forestgreen">@lsv.PhuongThucThanhToanString</span></th></tr>
@@ -37,7 +41,7 @@
                         {
                             <tr><th>Trạng thái:</th><th><span style="color: #e6004c">@lsv.TrangThaiString</span></th></tr>
                         }
-                        <tr><th>Tổng Tiền:</th><th><span style="color: black">@lsv.TongTien.000 đ</span></th></tr>
+                        <tr><th>Tổng Tiền:</th><th><span style="color: black">@lsv.TongTien.ToString("c")</span></th></tr>
                     </tbody>
                 </table>
                 @if (lsv.CoTheHuy)
