--- a/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Header.cshtml
+++ b/QuanLyKhachSan/QuanLyKhachSan/Views/Shared/_Header.cshtml
@@ -31,6 +31,7 @@
                     <li id="li-1"><a href="/DatPhong/DSPhong">Đặt Phòng</a></li>
                     <li id="li-2"><a href="/CaNhan/CaNhan">Cá Nhân</a></li>
                     <li id="li-3"><a href="/TrangChu/TinTuc">Khuyến mãi</a></li>
+                    <li id="li-6">@*<a href="/TrangChu/KeHoachPhong">Kế hoạch phòng</a>*@</li>
                     <li id="li-4">@*<a href="/TrangChu/LienHe">Liên Hệ</a>*@</li>
                 </ul>
             </div>
